lab5_helm_chart_version1_begin/guestbook/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: guestbook-ingress
spec:
  backend:
    serviceName: backend
    servicePort: 80
